<resources>
    <string name="app_name">NotePad2020</string>
    <string name="note_title_hint">给你的日记起个标题吧</string>
    <string name="note_title_label">标题</string>
    <string name="note_details_label">内容</string>
    <string name="note_details">有什么不想忘记的经历？</string>
    <string name="note_solved_label">我喜欢</string>
    <string name="date_picker_title">日期</string>
    <string name="new_note">新的日记</string>
    <string name="show_subtitle">显示记录条数</string>
    <string name="hide_subtitle">隐藏记录条数</string>
    <string name="subtitle_format">%1$d 条记录</string>
</resources>