<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/titleTextView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="379dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:text="@string/note_title_label"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/note_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/note_title"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="2dp"
        android:hint="@string/note_title_hint"
        android:maxLines="2"
        android:padding="16dp"
        android:textColorHint="@color/gray"
        android:theme="@style/EditTextStyleOne"
        app:layout_constraintBottom_toTopOf="@+id/detailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/note_photo"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/detailTextView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="3dp"
        android:padding="16dp"
        android:text="@string/note_details_label"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/note_detail"
        app:layout_constraintStart_toEndOf="@+id/select_photo" />

    <EditText
        android:id="@+id/note_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_details"
        android:maxLines="4"
        android:padding="16dp"
        android:theme="@style/EditTextStyleOne"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notepad_camera" />

    <Button
        android:id="@+id/note_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:alpha="0.6"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/link"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/note_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:alpha="0.6"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_date" />

    <CheckBox
        android:id="@+id/note_liked"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:alpha="0.7"
        android:padding="16dp"
        android:text="@string/note_solved_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_time" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/note_photo"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        app:riv_border_color="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/titleTextView"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_border_width="1dp"
        app:riv_corner_radius="10dp"
        app:srcCompat="@drawable/picture" />

    <ImageButton
        android:id="@+id/notepad_camera"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:background="#00000000"
        app:layout_constraintEnd_toStartOf="@+id/select_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_photo"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/select_photo"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:background="#00000000"
        app:layout_constraintEnd_toStartOf="@+id/detailTextView"
        app:layout_constraintStart_toEndOf="@+id/notepad_camera"
        app:layout_constraintTop_toBottomOf="@+id/note_photo"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageButton
        android:id="@+id/viewText"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/view"
        app:layout_constraintBottom_toTopOf="@+id/note_detail"
        app:layout_constraintStart_toStartOf="@+id/detailTextView"
        app:layout_constraintTop_toBottomOf="@+id/note_title"
        app:layout_constraintVertical_bias="1.0" />

    <com.example.notepad20.ControlClickSpanTextView
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:autoLink="all"
        android:textColorHint="@color/gray"
        android:textColor="@color/gray"
        android:hint="长按保存链接，视频还是音乐?"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>